--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,7 +4,7 @@
 /**!*/
 
 body {
-    background: linear-gradient(45deg, #9799dd 0%, #ffffff 100%);
+    background: linear-gradient(45deg, #9799dd 0%, #cbcbf3 100%);
     /*display: flex;*/
     /*justify-content: center;*/
     /*align-items: center;*/
