--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -32,9 +32,9 @@
                                     <ul class="list-group list-group-flush">
                                         {% for commission in commissions %}
                                             {% if commission.libelle in app.request.pathInfo  %}
-                                                <li class="list-group-item active">{{ commission.libelle }}</li>
+                                                <li class="list-group-item active">{{ commission.libelle }} {{ commission.icone }}</li>
                                             {% else %}
-                                                <li class="list-group-item"><a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a></li>
+                                                <li class="list-group-item"><a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a> {{ commission.icone }}</li>
                                             {% endif %}
                                         {% endfor %}
                                         {% if commissions|length == 0 %}
@@ -52,10 +52,10 @@
                                             <li class="list-group-item"><b>Aucune commission disponible</b></li>
                                         {% else %}
                                             {% for commissionTemporaire in commissionsTemporaireNonClos %}
-                                                {% if commissionTemporaire.libelle in app.request.pathInfo  %}
+                                                {% if "/commission-temporaire/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                                     <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                                 {% else %}
-                                                    <li class="list-group-item">{{ commissionTemporaire.libelle }}</li>
+                                                    <li class="list-group-item"><a href="/commission-temporaire/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
                                                 {% endif %}
                                             {% endfor %}
                                         {% endif %}
@@ -72,10 +72,10 @@
                                                 <li class="list-group-item"><b>Aucune commission disponible</b></li>
                                             {% else %}
                                                 {% for commissionTemporaire in commissionsTemporaireClos %}
-                                                    {% if commissionTemporaire.libelle in app.request.pathInfo  %}
+                                                    {% if "/commission-clos/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                                         <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                                     {% else %}
-                                                        <li class="list-group-item"><a href="/commission/{{ commissionTemporaire.libelle }}">{{ commissionTemporaire.libelle }}</a></li>
+                                                        <li class="list-group-item"><a href="/commission-clos/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
                                                     {% endif %}
                                                 {% endfor %}
                                             {% endif %}
@@ -107,9 +107,9 @@
                         <ul class="list-group list-group-flush">
                             {% for commission in commissions %}
                                 {% if commission.libelle in app.request.pathInfo  %}
-                                    <li class="list-group-item active">{{ commission.libelle }}</li>
+                                    <li class="list-group-item active">{{ commission.libelle }} {{ commission.icone }}</li>
                                 {% else %}
-                                    <li class="list-group-item text-black"><a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a></li>
+                                    <li class="list-group-item text-black"><a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a> {{ commission.icone }}</li>
                                 {% endif %}
                             {% endfor %}
                             {% if commissions|length == 0 %}
@@ -127,10 +127,10 @@
                                 <li class="list-group-item"><b>Aucune commission disponible</b></li>
                             {% else %}
                                 {% for commissionTemporaire in commissionsTemporaireNonClos %}
-                                    {% if commissionTemporaire.libelle in app.request.pathInfo  %}
+                                    {% if "/commission-temporaire/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                         <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                     {% else %}
-                                        <li class="list-group-item"><a href="/commission/{{ commissionTemporaire.libelle }}">{{ commissionTemporaire.libelle }}</a></li>
+                                        <li class="list-group-item"><a href="/commission-temporaire/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
                                     {% endif %}
                                 {% endfor %}
                             {% endif %}
@@ -147,10 +147,10 @@
                                     <li class="list-group-item"><b>Aucune commission disponible</b></li>
                                 {% else %}
                                     {% for commissionTemporaire in commissionsTemporaireClos %}
-                                        {% if commissionTemporaire.libelle in app.request.pathInfo  %}
+                                        {% if "/commission-clos/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                             <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                         {% else %}
-                                            <li class="list-group-item"><a href="/commission/{{ commissionTemporaire.libelle }}">{{ commissionTemporaire.libelle }}</a></li>
+                                            <li class="list-group-item"><a href="/commission-clos/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
                                         {% endif %}
                                     {% endfor %}
                                 {% endif %}
@@ -169,54 +169,58 @@
 
             </div>
             <div class="col-12 col-lg-9 " style="height: 100%">
-                <div class="overflow-y-scroll bg-light border-2 rounded-2" style="max-height: 95%">
+                <div class="overflow-y-scroll bg-light border-2 rounded-2" style="height: 95%">
                     <br>
-                    {% for message in messages %}
-                        {#                        {% if message.commissions ==  %}#}
-                        {% if app.user.id ==  message.user.id %}
-                            <div class="row justify-content-end" style="width: 99%">
-                                <div class="col-8 text-break justify-content-end border border-secondary-subtle border-2 rounded-5 bg-body-secondary">
-                                    <div>
-                                        {% if is_granted('ROLE_USER') %}
-                                            <span class="badge rounded-pill text-bg-primary">Utilisateur</span>
-                                        {% endif %}
-                                        {% if is_granted('ROLE_ADMIN') %}
-                                            <span class="badge rounded-pill text-bg-danger">Admin</span>
-                                        {% endif %}
-                                        <b>{{ message.user.nom }} {{ message.user.prenom }}:</b>
-                                    </div>
-                                    <div>
-                                        {{ message.contenu }}
-                                    </div>
-                                    <div class="text-end">
-                                        <i>{{ message.dateEnvoi|date('d/m/Y H:i:s') }}</i>
-                                    </div>
-                                </div>
-                            </div>
-                        {% else %}
-                            <div class="row ms-2" style="width: 99%">
-                                <div class="col-8 text-break border border-secondary-subtle border-2 rounded-5 bg-body-secondary">
-                                    <div>
-                                        {% if is_granted('ROLE_USER') %}
-                                            <span class="badge rounded-pill text-bg-primary">Utilisateur</span>
-                                        {% endif %}
-                                        {% if is_granted('ROLE_ADMIN') %}
-                                            <span class="badge rounded-pill text-bg-danger">Admin</span>
-                                        {% endif %}
-                                        <b>{{ message.user.nom }} {{ message.user.prenom }}:</b>
-                                    </div>
-                                    <div>
-                                        {{ message.contenu }}
-                                    </div>
-                                    <div class="text-end">
-                                        <i>{{ message.dateEnvoi|date('d/m/Y H:i:s') }}</i>
+                    {% if messages|length == 0 %}
+                        <div class="text-center">
+                            <b>Aucun message disponible</b>
+                        </div>
+                    {% else %}
+                        {% for message in messages %}
+                            {% if app.user.id ==  message.user.id %}
+                                <div class="row justify-content-end" style="width: 99%">
+                                    <div class="col-8 text-break justify-content-end border border-secondary-subtle border-2 rounded-5 bg-body-secondary">
+                                        <div>
+                                            {% if is_granted('ROLE_USER') %}
+                                                <span class="badge rounded-pill text-bg-primary">Utilisateur</span>
+                                            {% endif %}
+                                            {% if is_granted('ROLE_ADMIN') %}
+                                                <span class="badge rounded-pill text-bg-danger">Admin</span>
+                                            {% endif %}
+                                            <b>{{ message.user.nom }} {{ message.user.prenom }}:</b>
+                                        </div>
+                                        <div>
+                                            {{ message.contenu }}
+                                        </div>
+                                        <div class="text-end">
+                                            <i>{{ message.dateEnvoi|date('d/m/Y H:i:s') }}</i>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        {% endif %}
-                        <hr class="opacity-0">
-                    {% endfor %}
-
+                            {% else %}
+                                <div class="row ms-2" style="width: 99%">
+                                    <div class="col-8 text-break border border-secondary-subtle border-2 rounded-5 bg-body-secondary">
+                                        <div>
+                                            {% if is_granted('ROLE_USER') %}
+                                                <span class="badge rounded-pill text-bg-primary">Utilisateur</span>
+                                            {% endif %}
+                                            {% if is_granted('ROLE_ADMIN') %}
+                                                <span class="badge rounded-pill text-bg-danger">Admin</span>
+                                            {% endif %}
+                                            <b>{{ message.user.nom }} {{ message.user.prenom }}:</b>
+                                        </div>
+                                        <div>
+                                            {{ message.contenu }}
+                                        </div>
+                                        <div class="text-end">
+                                            <i>{{ message.dateEnvoi|date('d/m/Y H:i:s') }}</i>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
+                            <hr class="opacity-0">
+                        {% endfor %}
+                    {% endif %}
                     <form method="post">
                         <div class="fixed-bottom input-group p-2">
                             <!-- TODO mettre le input hidden des commissions -->
