--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -221,24 +221,24 @@
                             <hr class="opacity-0">
                         {% endfor %}
                     {% endif %}
-                    <form method="post">
-                        <div class="fixed-bottom input-group p-2">
-                            <!-- TODO mettre le input hidden des commissions -->
-                            <input type="text" class="form-control" placeholder="Message" aria-label="Message" aria-describedby="basic-addon2">
-                            <div class="input-group-append align-content-center">
-                                <input class="btn btn-success bg-gradient" value="Envoyer" type="submit">
+                    <form action="/sendMessage" method="post">
+                        <input type="hidden" name="user" value="{{ app.user.id }}">
+                        {% if commissionSelected|default(null) %}
+                            <input type="hidden" name="commission" value="{{ commissionSelected.id }}">
+                        {% endif %}
+                        {% if commissionTemporaireSelected|default(null) %}
+                            <input type="hidden" name="commissionTemporaire" value="{{ commissionTemporaireSelected.id }}">
+                        {% endif %}
+                        <input type="hidden">
+                        <div class="fixed-bottom p-2">
+                            <div class="input-group">
+                                <input name="message" type="text" class="form-control" placeholder="Message" aria-label="Message" aria-describedby="basic-addon2">
+                                <div class="input-group-append align-content-center">
+                                    <input class="btn btn-success bg-gradient" value="Envoyer" type="submit">
+                                </div>
                             </div>
                         </div>
                     </form>
-                    {#                <div class="fixed-bottom">#}
-                    {#                    <form method="post">#}
-                    {#                        <!-- TODO mettre le input hidden des commissions -->#}
-                    {#                        <label>#}
-                    {#                            <input type="text" name="message" placeholder="Message">#}
-                    {#                        </label>#}
-                    {#                        <input value="Envoyer" type="submit" class="bi bi-send">#}
-                    {#                    </form>#}
-                    {#                </div>#}
                 </div>
             </div>
         </div>
