--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -34,7 +34,13 @@
                                             {% if commission.libelle in app.request.pathInfo  %}
                                                 <li class="list-group-item active">{{ commission.libelle }} {{ commission.icone }}</li>
                                             {% else %}
-                                                <li class="list-group-item"><a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a> {{ commission.icone }}</li>
+                                                <li class="list-group-item">
+                                                    <a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a> {{ commission.icone }}
+                                                    <!-- Affichage du nombre de message non lu -->
+                                                    {% if commission.id in messageNonLuCommission|keys %}
+                                                        <span class="badge text-bg-secondary">{{ messageNonLuCommission[commission.id] }}</span>
+                                                    {% endif %}
+                                                </li>
                                             {% endif %}
                                         {% endfor %}
                                         {% if commissions|length == 0 %}
@@ -55,7 +61,13 @@
                                                 {% if "/commission-temporaire/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                                     <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                                 {% else %}
-                                                    <li class="list-group-item"><a href="/commission-temporaire/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
+                                                    <li class="list-group-item">
+                                                        <a href="/commission-temporaire/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a>
+                                                        <!-- Affichage du nombre de message non lu -->
+                                                        {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
+                                                            <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                                                        {% endif %}
+                                                    </li>
                                                 {% endif %}
                                             {% endfor %}
                                         {% endif %}
@@ -75,7 +87,13 @@
                                                     {% if "/commission-clos/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                                         <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                                     {% else %}
-                                                        <li class="list-group-item"><a href="/commission-clos/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
+                                                        <li class="list-group-item">
+                                                            <a href="/commission-clos/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a>
+                                                            <!-- Affichage du nombre de message non lu -->
+                                                            {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
+                                                                <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                                                            {% endif %}
+                                                        </li>
                                                     {% endif %}
                                                 {% endfor %}
                                             {% endif %}
@@ -109,7 +127,13 @@
                                 {% if commission.libelle in app.request.pathInfo  %}
                                     <li class="list-group-item active">{{ commission.libelle }} {{ commission.icone }}</li>
                                 {% else %}
-                                    <li class="list-group-item text-black"><a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a> {{ commission.icone }}</li>
+                                    <li class="list-group-item text-black">
+                                        <a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a> {{ commission.icone }}
+                                        <!-- Affichage du nombre de message non lu -->
+                                        {% if commission.id in messageNonLuCommission|keys %}
+                                            <span class="badge text-bg-secondary">{{ messageNonLuCommission[commission.id] }}</span>
+                                        {% endif %}
+                                    </li>
                                 {% endif %}
                             {% endfor %}
                             {% if commissions|length == 0 %}
@@ -130,7 +154,13 @@
                                     {% if "/commission-temporaire/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                         <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                     {% else %}
-                                        <li class="list-group-item"><a href="/commission-temporaire/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
+                                        <li class="list-group-item">
+                                            <a href="/commission-temporaire/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a>
+                                            <!-- Affichage du nombre de message non lu -->
+                                            {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
+                                                <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                                            {% endif %}
+                                        </li>
                                     {% endif %}
                                 {% endfor %}
                             {% endif %}
@@ -150,7 +180,13 @@
                                         {% if "/commission-clos/" ~ commissionTemporaire.id == app.request.pathInfo %}
                                             <li class="list-group-item active">{{ commissionTemporaire.libelle }}</li>
                                         {% else %}
-                                            <li class="list-group-item"><a href="/commission-clos/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a></li>
+                                            <li class="list-group-item">
+                                                <a href="/commission-clos/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a>
+                                                <!-- Affichage du nombre de message non lu -->
+                                                {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
+                                                    <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                                                {% endif %}
+                                            </li>
                                         {% endif %}
                                     {% endfor %}
                                 {% endif %}
