--- a/templates/index/index-navbar-sm.html.twig
+++ b/templates/index/index-navbar-sm.html.twig
@@ -19,6 +19,12 @@
             </div>
             <div class="offcanvas-body">
                 {% include 'index/index-card.html.twig' %}
+                <div class="text-center">
+                    <hr class="opacity-0">
+                    <form action="{{ path('app_logout') }}" method="post">
+                        <button type="submit" class="btn btn-danger ">Se déconnecter</button>
+                    </form>
+                </div>
                 {% include 'index/index-card-admin.html.twig' %}
             </div>
         </div>
