--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,7 +17,7 @@
     {% if not app.user %}
         <div class="container-fluid h-100">
             <div class="row h-100">
-                <div class="col-6 m-auto">
+                <div class="col-lg-6 m-auto">
                     <form method="post" class="border border-light p-2 border-2 rounded-2 m-auto">
                         <img alt="Logo Limayrac" src="{{ asset('images/logo.png') }}" class="rounded mx-auto d-block img-fluid">
                         <h1 class="h3 mb-3 font-weight-normal text-center"><b>Connexion</b></h1>
