--- a/templates/index/index-card.html.twig
+++ b/templates/index/index-card.html.twig
@@ -16,10 +16,16 @@
                 {% else %}
                     <li class="list-group-item">
                         <a href="/commission/{{ commission.libelle }}">{{ commission.libelle }}</a> {{ commission.icone }}
-                        <!-- Affichage du nombre de message non lu -->
-                        {% if commission.id in messageNonLuCommission|keys %}
-                            <span class="badge text-bg-secondary">{{ messageNonLuCommission[commission.id] }}</span>
+                        {% if commission in commissionNotifActive %}
+                            <!-- Affichage du nombre de message non lu -->
+                            {% if commission.id in messageNonLuCommission|keys %}
+                                <span class="badge text-bg-secondary">{{ messageNonLuCommission[commission.id] }}</span>
+                            {% endif %}
+                        {% else %}
+                            <!-- Les notifications sont désactivées-->
+                            🚫
                         {% endif %}
+
                     </li>
                 {% endif %}
             {% endfor %}
@@ -50,10 +56,16 @@
                     {% else %}
                         <li class="list-group-item">
                             <a href="/commission-temporaire/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a>
-                            <!-- Affichage du nombre de message non lu -->
-                            {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
-                                <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                            {% if commissionTemporaire in commissionTemporaireNotifActive %}
+                                <!-- Affichage du nombre de message non lu -->
+                                {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
+                                    <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                                {% endif %}
+                            {% else %}
+                                <!-- Les notifications sont désactivées-->
+                                🚫
                             {% endif %}
+
                         </li>
                     {% endif %}
                 {% endfor %}
@@ -67,7 +79,7 @@
 
 {# Commission temporaire clos #}
 
-{% if is_granted('ROLE_USER') %} {#TODO : Changer en ROLE Admin#}
+{% if is_granted('ROLE_ADMIN') %}
 
     <div class="card">
         <div class="card-header">
@@ -84,9 +96,14 @@
                         {% else %}
                             <li class="list-group-item">
                                 <a href="/commission-clos/{{ commissionTemporaire.id }}">{{ commissionTemporaire.libelle }}</a>
-                                <!-- Affichage du nombre de message non lu -->
-                                {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
-                                    <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                                {% if commissionTemporaire in commissionTemporaireNotifActive %}
+                                    <!-- Affichage du nombre de message non lu -->
+                                    {% if commissionTemporaire.id in messageNonLuCommissionTemporaire|keys %}
+                                        <span class="badge text-bg-secondary">{{ messageNonLuCommissionTemporaire[commissionTemporaire.id] }}</span>
+                                    {% endif %}
+                                {% else %}
+                                    <!-- Les notifications sont désactivées-->
+                                    🚫
                                 {% endif %}
                             </li>
                         {% endif %}
